changes till numbers

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
         <link href="lib/animate/animate.min.css" rel="stylesheet">
         <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
         <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
 
         <!-- Template Stylesheet -->
         <link href="css/style.css" rel="stylesheet">
@@ -111,7 +113,10 @@
                                     I am a certified Google Cloud Professional Machine Learning Engineer.
                                 </p>
                             </div>
-                            <!-- <div class="skills">
+                            <a class="btn" href="">Learn More</a>
+                        </div>
+                    </div>
+                                                <!-- <div class="skills">
                                 <div class="skill-name">
                                     <p>Web Design</p><p>85%</p>
                                 </div>
@@ -137,9 +142,6 @@
                                     <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
                             </div> -->
-                            <a class="btn" href="">Learn More</a>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
@@ -162,7 +164,7 @@
                             <div class="service-text">
                                 <h3>Web Design</h3>
                                 <p>
-                                    Lorem ipsum dolor sit amet elit. Phase nec preti mi. Curabi facilis ornare velit non
+                                    Expertly crafting visually appealing and user-friendly layouts that enhance overall user experience and engagement.
                                 </p>
                             </div>
                         </div>
@@ -175,8 +177,7 @@
                             <div class="service-text">
                                 <h3>Web Development</h3>
                                 <p>
-                                    Lorem ipsum dolor sit amet elit. Phase nec preti mi. Curabi facilis ornare velit non
-                                </p>
+                                    Developing robust websites utilizing modern technologies and best practices to ensure optimal performance and scalability.                                </p>
                             </div>
                         </div>
                     </div>
@@ -188,7 +189,7 @@
                             <div class="service-text">
                                 <h3>Apps Design</h3>
                                 <p>
-                                    Lorem ipsum dolor sit amet elit. Phase nec preti mi. Curabi facilis ornare velit non
+                                    Designing intuitive and engaging mobile applications tailored to meet user needs while ensuring aesthetic appeal.
                                 </p>
                             </div>
                         </div>
@@ -201,7 +202,33 @@
                             <div class="service-text">
                                 <h3>Apps Development</h3>
                                 <p>
-                                    Lorem ipsum dolor sit amet elit. Phase nec preti mi. Curabi facilis ornare velit non
+                                    Creating high-performance applications across various platforms with a strong focus on functionality and user satisfaction.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.6s">
+                        <div class="service-item">
+                            <div class="service-icon">
+                                <i class="fa-solid fa-database" style="color: #ff0000;"></i>
+                            </div>
+                            <div class="service-text">
+                                <h3>Database Management</h3>
+                                <p>
+                                    Efficiently organizing, managing, and securing data to support application performance, reliability, and integrity.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.2s">
+                        <div class="service-item">
+                            <div class="service-icon">
+                                <i class="fa-solid fa-gear" style="color: #ff0000;"></i>
+                            </div>
+                            <div class="service-text">
+                                <h3>API Development</h3>
+                                <p>
+                                    Designing and maintaining APIs that enable seamless integration and communication between diverse software systems.
                                 </p>
                             </div>
                         </div>
@@ -222,61 +249,71 @@
                 <div class="timeline">
                     <div class="timeline-item left wow slideInLeft" data-wow-delay="0.1s">
                         <div class="timeline-text">
-                            <div class="timeline-date">2045 - 2050</div>
+                            <div class="timeline-date">2022 - 2024</div>
                             <h2>Web Developer</h2>
-                            <h4>Soft Agency, San Francisco, CA</h4>
+                            <h4>Qburst Technologies, Infopark , Kerala</h4>
                             <p>
-                                Lorem ipsum dolor sit amet elit. Aliquam odio dolor, id luctus erat sagittis non. Ut blandit semper pretium.
+                                Possessing extensive experience in full stack development, I specialize in seamlessly integrating front-end and back-end technologies to deliver robust, scalable, and user-centric solutions.
                             </p>
                         </div>
                     </div>
                     <div class="timeline-item right wow slideInRight" data-wow-delay="0.1s">
                         <div class="timeline-text">
-                            <div class="timeline-date">2045 - 2050</div>
-                            <h2>Web Developer</h2>
-                            <h4>Soft Agency, San Francisco, CA</h4>
+                            <div class="timeline-date">2022 - 2024</div>
+                            <h2>Backend Developer</h2>
+                            <h4>Qburst Technologies, Infopark , Kerala</h4>
                             <p>
-                                Lorem ipsum dolor sit amet elit. Aliquam odio dolor, id luctus erat sagittis non. Ut blandit semper pretium.
+                                PHP Laravel, Node.js, Django.
                             </p>
                         </div>
                     </div>
                     <div class="timeline-item left wow slideInLeft" data-wow-delay="0.1s">
                         <div class="timeline-text">
-                            <div class="timeline-date">2045 - 2050</div>
-                            <h2>Web Developer</h2>
-                            <h4>Soft Agency, San Francisco, CA</h4>
+                            <div class="timeline-date">2022 - 2024</div>
+                            <h2>Frontend Developer</h2>
+                            <h4>Qburst Technologies, Infopark , Kerala</h4>
                             <p>
-                                Lorem ipsum dolor sit amet elit. Aliquam odio dolor, id luctus erat sagittis non. Ut blandit semper pretium.
+                                React,HTML,CSS,Bootstrap,Vue.js.
                             </p>
                         </div>
                     </div>
                     <div class="timeline-item right wow slideInRight" data-wow-delay="0.1s">
                         <div class="timeline-text">
-                            <div class="timeline-date">2045 - 2050</div>
-                            <h2>Web Developer</h2>
-                            <h4>Soft Agency, San Francisco, CA</h4>
+                            <div class="timeline-date">2022 - 2024</div>
+                            <h2>Joomla Developer</h2>
+                            <h4>Qburst Technologies, Infopark , Kerala</h4>
                             <p>
-                                Lorem ipsum dolor sit amet elit. Aliquam odio dolor, id luctus erat sagittis non. Ut blandit semper pretium.
+                                Proficient in Joomla, adept at developing and managing dynamic websites with a focus on usability and performance.
                             </p>
                         </div>
                     </div>
                     <div class="timeline-item left wow slideInLeft" data-wow-delay="0.1s">
                         <div class="timeline-text">
-                            <div class="timeline-date">2045 - 2050</div>
-                            <h2>Web Developer</h2>
-                            <h4>Soft Agency, San Francisco, CA</h4>
+                            <div class="timeline-date">2023 - 2024</div>
+                            <h2>Wordpress Developer</h2>
+                            <h4>Qburst Technologies, Infopark , Kerala</h4>
                             <p>
-                                Lorem ipsum dolor sit amet elit. Aliquam odio dolor, id luctus erat sagittis non. Ut blandit semper pretium.
+                                Extensive experience with WordPress, specializing in custom themes and plugins to enhance functionality and user experience.
                             </p>
                         </div>
                     </div>
                     <div class="timeline-item right wow slideInRight" data-wow-delay="0.1s">
                         <div class="timeline-text">
-                            <div class="timeline-date">2045 - 2050</div>
-                            <h2>Web Developer</h2>
-                            <h4>Soft Agency, San Francisco, CA</h4>
+                            <div class="timeline-date">2023 - 2024</div>
+                            <h2>Drupal Developer</h2>
+                            <h4>Qburst Technologies, Infopark , Kerala</h4>
                             <p>
-                                Lorem ipsum dolor sit amet elit. Aliquam odio dolor, id luctus erat sagittis non. Ut blandit semper pretium.
+                                Solid understanding of Drupal, enabling effective implementation of complex content management solutions.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="timeline-item left wow slideInLeft" data-wow-delay="0.1s">
+                        <div class="timeline-text">
+                            <div class="timeline-date">2023 - 2024</div>
+                            <h2>Machine Learning</h2>
+                            <h4>Qburst Technologies, Infopark , Kerala</h4>
+                            <p>
+                                Certified in Google Cloud with extensive experience in machine learning, specializing in developing and deploying scalable models that drive data-driven insights and solutions.
                             </p>
                         </div>
                     </div>
@@ -295,9 +332,9 @@
                 </div>
                 <div class="container banner-text">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec pretium mi. Curabitur facilisis ornare velit non vulputate. Aliquam metus tortor, auctor id gravida condimentum, viverra quis sem. Curabitur non nisl nec nisi scelerisque maximus. 
-                    </p>
-                    <a class="btn">Pricing Plan</a>
+                        With a commitment to delivering exceptional value, I provide competitive pricing tailored to meet your needs. My approach combines quality with affordability, ensuring you receive the best possible service without compromising on excellence. Let's work together to achieve your goals with a pricing strategy that fits your budget.
+                    </p> 
+                    <a href="#contact" class="btn" >Pricing Plan</a>
                 </div>
             </div>
         </div>
@@ -398,14 +435,25 @@
         <div class="banner wow zoomIn" data-wow-delay="0.1s">
             <div class="container">
                 <div class="section-header text-center">
-                    <p>Awesome Discount</p>
-                    <h2>Get <span>30%</span> Discount</h2>
+                    <h2>Achievements</h2> <!-- Optional heading for the section -->
                 </div>
-                <div class="container banner-text">
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec pretium mi. Curabitur facilisis ornare velit non vulputate. Aliquam metus tortor, auctor id gravida condimentum, viverra quis sem. Curabitur non nisl nec nisi scelerisque maximus. 
-                    </p>
-                    <a class="btn">Order Now</a>
+                <div class="sections">
+                    <div class="section">
+                        <h3>153</h3>
+                        <p>Webs Developed</p>
+                    </div>
+                    <div class="section">
+                        <h3>97</h3>
+                        <p>Complete Projects</p>
+                    </div>
+                    <div class="section">
+                        <h3>103</h3>
+                        <p>Happy Customers</p>
+                    </div>
+                    <div class="section">
+                        <h3>200</h3>
+                        <p>Cups of Coffee</p>
+                    </div>
                 </div>
             </div>
         </div>
