--- a/index.html
+++ b/index.html
@@ -803,23 +803,27 @@
                 <div class="col-md-4"></div>
                 <div class="col-md-8">
                     <div class="contact-form">
-                        <div id="success" style="color: white; margin-bottom: 20px;"></div>
+                        <div id="success" style="color: white; font-size: 0.9em; font-style: italic; margin-bottom: 20px;"></div>
                         <form name="sentMessage" id="contact-form" novalidate="novalidate">
                             <div class="control-group">
                                 <input type="text" class="form-control" name="from_name" placeholder="Your Name" required="required" data-validation-required-message="Please enter your name" />
-                                <p class="help-block" style="color: white;"></p>
+                                <p class="help-block" style="color: white; font-size: 0.9em; font-style: italic;"></p>
+
                             </div>
                             <div class="control-group">
                                 <input type="email" class="form-control" name="email_id" placeholder="Your Email" required="required" data-validation-required-message="Please enter your email" />
-                                <p class="help-block" style="color: white;"></p>
+                                <p class="help-block" style="color: white; font-size: 0.9em; font-style: italic;"></p>
+
                             </div>
                             <div class="control-group">
                                 <input type="text" class="form-control" name="subject" placeholder="Subject" required="required" data-validation-required-message="Please enter a subject" />
-                                <p class="help-block" style="color: white;"></p>
+                                <p class="help-block" style="color: white; font-size: 0.9em; font-style: italic;"></p>
+
                             </div>
                             <div class="control-group">
                                 <textarea class="form-control" name="message" placeholder="Message" required="required" data-validation-required-message="Please enter your message"></textarea>
-                                <p class="help-block" style="color: white;"></p>
+                                <p class="help-block" style="color: white; font-size: 0.9em; font-style: italic;"></p>
+
                             </div>
                             <div>
                                 <button class="btn" type="submit" value="Send">Send Message</button>
