--- a/index.html
+++ b/index.html
@@ -769,16 +769,16 @@
                             </div>
                         </div>
                     </div>
-                    <!-- <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.6s">
+                    <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.6s">
                         <div class="team-item">
                             <div class="team-img">
-                                <img src="img/team-4.jpg" alt="Image">
+                                <img src="img/team-1.jpg" alt="Image">
                             </div>
                             <div class="team-text">
-                                <h2>Josh Dunn</h2>
-                                <h4>Apps Developer</h4>
+                                <h2>Bikku</h2>
+                                <h4>Backend Developer/Data Engineer</h4>
                                 <p>
-                                    Lorem ipsum dolor sit amet consec adipis elit. Etiam accum lacus
+                                    <!-- Lorem ipsum dolor sit amet consec adipis elit. Etiam accum lacus -->
                                 </p>
                                 <div class="team-social">
                                     <a class="btn" href=""><i class="fab fa-twitter"></i></a>
@@ -788,7 +788,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div> -->
+                    </div>
                 </div>
             </div>
         </div>
